# bqf_genric_functions

./: CMakeLists.txt  LICENSE  README.md
src/: bitrankasm.hpp  bitselectasm.hpp  pdep.hpp  test_asm.cpp  tzcnt.hpp
src/functions/: bitselectasm.hpp
